# usv-diagnostic-gui

./: .gitignore  README.md  install.sh
src/usv_command_msgs/: CMakeLists.txt  package.xml
src/usv_command_msgs/action/: RunCommand.action
src/usv_diagnostic_gui/: gui_node.py  main_window.py  package.xml  setup.cfg  setup.py
src/usv_diagnostic_gui/config/: config.yaml
src/usv_diagnostic_gui/launch/: gui_launch.py
src/usv_diagnostic_gui/usv_diagnostic_gui/: camera_window.py  diagnostic_widgets.py  gui_node.py  main.py  main_window.py  map_widget.py  mikrotik_monitor_node.py  ros_node.py  septentrio_nmea_parser_node.py  usv_external_pinger.py  usv_gui_node.py  usv_pi_interface_node.py
